TEST_PROGRAMS/VALID/01/#16.1.go
package main

// this tests for simple declaration of array and slice

var x []int;
var y [3]int;
