TEST_PROGRAMS/INVALID/01/#16.2.go
package main

// can't use expression as length inside array declaration

var foo = 3;
var x []int;
var y [foo]int;
